feature: add new endpoint to cancel disposals
